--- a/CONTACT.html
+++ b/CONTACT.html
@@ -20,7 +20,7 @@
         <h1>Contact Us</h1>
     </header>
     <nav>
-        <a href="HOME.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="ABOUT.html">About Us</a>
 <a href="hhhhhhhh.html">Gallery</a>
         <a href="CONTACT.html">Contact Us</a>
